# essentials.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: application.rs  lib.rs  marco.rs  short.rs  std.rs  wrap.rs  wrapper.rs
src/application/: mod.rs
src/wrap/: lang.rs  reason.rs
src/wrapper/: arch.rs  lang.rs  result.rs  unit.rs  version.rs  warn.rs
src/wrapper/unit/builtin/: time.rs
