[package]
name = "essentials"
license = "MIT"
version = "0.3.0"
edition = "2021"
authors = ["andei_buite", "nishikigii"]
description = "essential utils for rustaceans"
repository = "https://github.com/Nishikigii/essentials.rs"
keywords = ["nishikigii", "tool", "util"]

[dependencies]

[features]
default = ["traits", "struct", "shortcut", "io"]
traits = []
struct = ["traits"]
shortcut = ["traits"]
io = ["traits", "struct", "shortcut"]
full = ["traits", "struct", "shortcut", "io"]